--- a/config.yaml
+++ b/config.yaml
@@ -1,3 +1,6 @@
 todays_events_keyword: 'tdy'
 tomorrows_events_keyword: 'tmr'
 weather_keyword: 'w'
+email_keyword: 'e'
+email_to: 'felipealamos@gmail.com'
+email_sender: 'felipealamos@gmail.com '
