Moved calendars ids to config file

--- a/config.yaml
+++ b/config.yaml
@@ -4,3 +4,4 @@ weather_keyword: 'w'
 email_keyword: 'e'
 email_to: 'felipealamos@gmail.com'
 email_sender: 'felipealamos@gmail.com '
+calendars_ids: ['primary', 'ims45u9bmo1rse8skeb865pdjg@group.calendar.google.com']
